deploy/kubernetes/www.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-hostname
  labels:
    app: node-hostname
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-hostname
  template:
    metadata:
      labels:
        app: node-hostname
    spec:
      containers:
      - name: node-hostname
        image: ghcr.io/zozs/node-hostname:latest
        ports:
        - name: http
          containerPort: 3000
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
        readinessProbe:
          httpGet:
            path: /
            port: 3000
        securityContext:
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          runAsUser: 1000  # corresponds to "node" user
---
apiVersion: v1
kind: Service
metadata:
  name: node-hostname
spec:
  selector:
    app: node-hostname
  ports:
  - name: http
    port: 80
    targetPort: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: node-hostname
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`hostname.cryptosec.se`)
    services:
    - name: node-hostname
      port: http
  tls:
    certResolver: default
